# MODULAR-RAG-MCP-SERVER

./: .env.example  .gitignore  AGENTS.md  DEV_SPEC.md  README.md  main.py  pyproject.toml  uv.toml
config/: settings.yaml
config/prompts/: chunk_refinement.txt  image_captioning.txt  metadata_enricher.txt  rerank.txt
learning-notes/: README.md  TEACHING_MODE_PLAYBOOK.md  TEACHING_MODE_TRACKER.md  USER_PREFERENCES.md
learning-notes/phase-a/: A2-pytest-and-smoke-test.md  A3-settings-loader-and-validation.md
learning-notes/phase-b/: B-phase-module-map-and-rationale.md  B1-llm-interface-and-factory.md  B2-embedding-interface-and-factory.md  B3-splitter-interface-and-factory.md  B4-vector-store-contract-and-factory.md  B5-reranker-interface-factory-and-none-fallback.md  B6-evaluator-interface-factory-and-custom-metrics.md  B7.1-openai-compatible-llm-implementation.md  B7.2-ollama-llm-local-backend.md  B7.3-openai-and-azure-embedding-implementation.md  B7.4-ollama-embedding-implementation.md  B7.5-recursive-splitter-default-implementation.md  B7.6-chroma-store-default-backend.md  B7.7-llm-reranker-prompt-and-structured-output.md  B7.8-cross-encoder-reranker-default-implementation.md  B8-vision-llm-interface-and-factory.md  B9-azure-vision-llm-implementation.md
learning-notes/phase-c/: C1-core-types-contract.md  C2-file-integrity-sha256-and-skip-check.md  C3-loader-base-and-pdf-loader.md  C4-document-chunker-adapter.md  C5-transform-base-and-chunk-refiner.md  C6-metadata-enricher.md
scripts/: evaluate.py  ingest.py  query.py  start_dashboard.py
src/core/: __init__.py  env.py  settings.py  types.py
src/ingestion/: __init__.py  document_manager.py  pipeline.py
src/libs/: __init__.py
src/mcp_server/: __init__.py  protocol_handler.py  server.py
src/observability/: __init__.py  logger.py
tests/: conftest.py
(+147 files in other folders)
