[project]
name = "modular-rag-mcp-server"
version = "0.1.0"
description = "Modular RAG MCP server"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.0",
]

[project.scripts]
mcp-server = "main:main"
start-dashboard = "scripts.start_dashboard:main"
evaluate-rag = "scripts.evaluate:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "e2e: end-to-end tests",
]
